--- a/generateNewHtml.Rmd
+++ b/generateNewHtml.Rmd
@@ -4,8 +4,8 @@ output: html_document
 author:
 date: "20190911"
 params:
-  speaker: "Tom"
-  speechContent: "分享工作。。。。。"
+  speaker: "Claire"
+  speechContent: "職涯經驗分享講座"
   speakerImage: "https://www.ntpu.edu.tw/admin/a3/files/a3_photo/20190805162930.jpg"
 ---
 
@@ -25,6 +25,39 @@ c(
 "assets/img/intro.jpg"=params$speakerImage
 )
 ) -> newindexContent
-
+#生成新網頁
 writeLines(newindexContent,"new.html",useByte = TRUE)
 ```
+```{r}
+Sys.setlocale(category = "LC_ALL", locale = "UTF-8")
+```
+
+```{r}
+params$a
+#params$speaker
+#params$speechContent
+#params$speakerImage
+
+speaker <- "Claire"
+speechContent <- "職涯經驗分享座談會"
+speakerImage <- "https://www.ntpu.edu.tw/admin/a3/files/a3_photo/20190805162930.jpg"
+
+#讀入html檔,放進index(加encoding = 'UTF-8'解決中文亂碼)
+index <- readLines("index.html",encoding = 'UTF-8')
+
+#把要取代的關鍵字取代掉
+library(stringr)
+#str_replace(index,"_Speaker_",speaker)
+str_replace_all(
+index,
+c(
+"_Speaker_" = speaker,
+"_speechContent_" = speechContent,
+"assets/img/intro.jpg" = speakerImage
+)
+) -> newindexContent
+
+#生成新網頁
+writeLines(newindexContent, "newindex.html",useByte = TRUE)
+```
+
